feat: add sidebar styles

--- a/app/app.scss
+++ b/app/app.scss
@@ -32,6 +32,7 @@
     --Text-text-secondary: #272a2ab8;
     --Text-text-primary-invert: #ffffffeb;
     --Text-text-third: #272a2a8f;
+    --Status-danger-500: #e02c2c;
 }
 
 body {
