--- a/app/shared/ui/UserInfo/UserInfo.module.scss
+++ b/app/shared/ui/UserInfo/UserInfo.module.scss
@@ -4,6 +4,9 @@
     gap: 4px;
 
     &__name {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         font-size: 14px;
         line-height: 20px;
     }
