feat: add messages

--- a/app/features/UserItem/UserItem.module.scss
+++ b/app/features/UserItem/UserItem.module.scss
@@ -47,6 +47,7 @@
         justify-content: center;
         width: 24px;
         height: 24px;
+        margin-left: auto;
         border-radius: 50%;
         background-color: var(--Status-danger-500);
         color: var(--Text-text-primary-invert);
