--- a/app/app.scss
+++ b/app/app.scss
@@ -21,11 +21,14 @@
 :root {
     --Interface-background-wa: #e6e2db;
     --Interface-background: #ffffff;
+    --Interface-background-modal: #00000099;
+    --Interface-border-100: #dcdddd;
     --Darkner-darkner-4: #0000000a;
     --Darkner-darkner-8: #00000014;
     --Darkner-darkner-24: #0000003d;
     --Accent-accent-500: #ff6b00;
     --Accent-link-50: #e7eefa;
+    --Accent-link-150: #b6cdf1;
     --Accent-link-400: #3c79d9;
     --Accent-link-500: #0b57d0;
     --Text-text-primary: #272a2a;
