feat: add texteditor

--- a/app/app.scss
+++ b/app/app.scss
@@ -27,6 +27,7 @@
     --Darkner-darkner-8: #00000014;
     --Darkner-darkner-24: #0000003d;
     --Accent-accent-500: #ff6b00;
+    --Accent-accent-700: #e05e00;
     --Accent-link-50: #e7eefa;
     --Accent-link-150: #b6cdf1;
     --Accent-link-400: #3c79d9;
