--- a/app/app.scss
+++ b/app/app.scss
@@ -37,6 +37,8 @@
     --Text-text-primary-invert: #ffffffeb;
     --Text-text-third: #272a2a8f;
     --Status-danger-500: #e02c2c;
+    --shadow-8: 0 8px 16px var(--Darkner-darkner-8);
+    --shadow-4: 0 0 4px var(--Darkner-darkner-4);
 }
 
 body {
