--- a/app/app.scss
+++ b/app/app.scss
@@ -35,6 +35,7 @@
     --Text-text-primary: #272a2a;
     --Text-text-secondary: #272a2ab8;
     --Text-text-primary-invert: #ffffffeb;
+    --Text-text-secondary-invert: #ffffffb8;
     --Text-text-third: #272a2a8f;
     --Status-danger-500: #e02c2c;
     --shadow-8: 0 8px 16px var(--Darkner-darkner-8);
