--- a/app/app.scss
+++ b/app/app.scss
@@ -22,10 +22,13 @@
     --Interface-background-wa: #e6e2db;
     --Interface-background: #ffffff;
     --Interface-background-modal: #00000099;
+    --Interface-background-dark-1: #141415;
     --Interface-border-100: #dcdddd;
+    --Lighter-lighter-16: #ffffff29;
     --Darkner-darkner-4: #0000000a;
     --Darkner-darkner-8: #00000014;
     --Darkner-darkner-24: #0000003d;
+    --Accent-accent-300: #ffa666;
     --Accent-accent-500: #ff6b00;
     --Accent-accent-700: #e05e00;
     --Accent-link-50: #e7eefa;
