--- a/app/widgets/Chat/Chat.module.scss
+++ b/app/widgets/Chat/Chat.module.scss
@@ -4,6 +4,10 @@
     flex-direction: column;
     border-left: 1px solid var(--Interface-border-100);
 
+    &__header {
+        border-bottom: 1px solid var(--Interface-border-100);
+    }
+
     &__empty {
         position: absolute;
         top: 50%;
