feat: add emoji

--- a/app/shared/ui/TextEditor/TextEditor.module.scss
+++ b/app/shared/ui/TextEditor/TextEditor.module.scss
@@ -1,6 +1,7 @@
 .editable-wrapper {
+    position: relative;
     width: 100%;
-    padding: 12px;
+    padding: 12px 44px 12px 12px;
     border-radius: 12px;
     border: 1px solid var(--Darkner-darkner-24);
 
