--- a/app/widgets/Chat/Chat.module.scss
+++ b/app/widgets/Chat/Chat.module.scss
@@ -5,7 +5,16 @@
     border-left: 1px solid var(--Interface-border-100);
 
     &__header {
+        flex: 0 0 auto;
         border-bottom: 1px solid var(--Interface-border-100);
+    }
+
+    &__content {
+        flex: 1 1 auto;
+    }
+
+    &__footer {
+        flex: 0 0 auto;
     }
 
     &__empty {
