--- a/app/shared/ui/ImagesView/ImagesView.module.scss
+++ b/app/shared/ui/ImagesView/ImagesView.module.scss
@@ -114,3 +114,15 @@
         border-radius: 8px;
     }
 }
+
+@media (max-width: 1000px) {
+    .view {
+        &__content {
+            padding: 16px 16px 32px;
+        }
+
+        &__sidebar {
+            display: none;
+        }
+    }
+}
