--- a/app/app.scss
+++ b/app/app.scss
@@ -14,6 +14,12 @@
     font-display: swap;
 }
 
+@mixin mobile {
+    @media (max-width: 1000px) {
+        @content;
+    }
+}
+
 * {
     box-sizing: border-box;
 }
