--- a/app/features/SidebarContent/SidebarContent.module.scss
+++ b/app/features/SidebarContent/SidebarContent.module.scss
@@ -24,3 +24,17 @@
         }
     }
 }
+
+@media (max-width: 1000px) {
+    .content {
+        &__search {
+            margin: 8px 16px 12px;
+        }
+
+        &__users {
+            margin: 0 2px 0 8px;
+            padding-right: 6px;
+            padding-bottom: 8px;
+        }
+    }
+}
