--- a/app/features/SidebarHeader/SidebarHeader.module.scss
+++ b/app/features/SidebarHeader/SidebarHeader.module.scss
@@ -2,5 +2,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px;
+    padding: 12px 12px 12px 24px;
+}
+
+@media (max-width: 1000px) {
+    .header {
+        padding: 12px 8px 12px 16px;
+    }
 }
