--- a/app/widgets/Chat/Chat.module.scss
+++ b/app/widgets/Chat/Chat.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     border-left: 1px solid var(--Interface-border-100);
+    background-color: var(--Interface-background-wa);
 
     &__header {
         flex: 0 0 auto;
